--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       class="min-h-10 bg-background flex items-center justify-between w-full h-1/10"
     >
       <a href="./index.html">
-        <h1 id="logo" class="text-ticket-green font-extrabold text-3xl">Tickethack</h1>
+        <h1 id="logo" class="text-ticket-green ml-5 font-extrabold text-3xl">Tickethack</h1>
       </a>
       <div>
         <a class="mx-5" href="./views/cart.html">Cart</a>
@@ -30,9 +30,9 @@
         </h3>
       </div>
     
-      <div id="boxes" class="h-7/10 min-h-[150px] flex justify-center items-start">
+      <div class="h-7/10 min-h-[150px] flex justify-center items-start">
         <div
-          class="min-h-[150px] mx-5 h-2/3 w-1/3 bg-background flex flex-col justify-evenly items-center"
+          class="min-h-[150px] mx-5 h-2/3 w-1/3 bg-background flex flex-col justify-evenly items-center rounded-xl"
         >
           <div class="w-17/20 m-2 text-center flex flex-col items-center">
             <input
@@ -42,7 +42,7 @@
               name="departure"
               id="departure"
             />
-            <hr class="bg-grey  h-px w-full" />
+            <hr class="bg-grey  h-px w-19/20" />
             <input
               class="rounded-xs max-h-10 h-full bg-grey w-full"
               type="text"
@@ -59,19 +59,19 @@
           />
           <button
             id="search-btn"
-            class="w-17/20 my-4 rounded-xs bg-ticket-green text-neutral-50"
+            class="w-17/20 my-4 green-button"
           >
             Search
           </button>
         </div>
         <div
           id="search-results"
-          class="min-h-[150px] mx-5 h-2/3 w-1/3 bg-background overflow-x-scroll flex flex-col justify-start items-center"
+          class="min-h-[150px] mx-5 h-2/3 w-1/3 bg-background overflow-x-scroll flex flex-col justify-center items-center  rounded-xl"
         >
           <img
             src="./images/train.png"
             alt="a logo of train"
-            class="h-2/3  p-5"
+            class="h-2/3 aspect-square p-5"
           />
           <hr class="h-px border-0 w-17/20 bg-ticket-green" />
           <p class="m-5 text-ticket-green">It's time to book your future trip.</p>
@@ -84,20 +84,20 @@
         <img
             src="./images/notfound.png"
             alt="trip not found"
-            class="h-2/3 p-5"
+            class="h-2/3 aspect-square p-5"
           />
           <hr class="h-px border-0 w-17/20 bg-ticket-green" />
           <p class="m-5 text-ticket-green">No trip found.</p>
     </template>
 
     <template id="trip-tmpl">
-        <div class="m-2 w-17/20 grid grid-cols-5">
-            <div class="col-start-1 col-span-3">
+        <div class="m-2 h-1/5 w-17/20 grid grid-cols-5 bg-deep-grey rounded-l">
+            <div class=" mx-5 col-start-1 col-span-2  text-left my-auto">
                 <span id="departure"></span> > <span id="arrival"></span>
             </div>
-            <div id="time" class="col-start-4 "></div>
-            <div><span class="col-start-5" id="price"></span>€</div>
-            <button class=" col-start-6  bg-ticket-green text-neutral-50 rounded-xs">Book</button>
+            <div id="time" class="col-start-3 my-auto "></div>
+            <div  class="col-start-4 my-auto"><span id="price"></span>€</div>
+            <button id="book-btn" class="col-start-5 m-auto p-1 align-middle max-h-[30px] green-button">Book</button>
         </div>
     </template>
 
