--- a/index.html
+++ b/index.html
@@ -1,106 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tickethack</title>
-    <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
-    <link rel='stylesheet' href='./style.css'>
-  </head>
-  <body class="h-[100vh] w-[100vw] bg-[url(./images/background.jpg)] bg-center bg-cover">
-    <header
-      class="min-h-10 bg-background flex items-center justify-between w-full h-1/10"
-    >
-      <a href="./index.html">
-        <h1 id="logo" class="text-ticket-green ml-5 font-extrabold text-3xl">Tickethack</h1>
-      </a>
-      <div>
-        <a class="mx-5" href="./views/cart.html">Cart</a>
-        <a class="mx-5" href="./views/bookings.html">Bookings</a>
-      </div>
-    </header>
-    <div id="main" class="inline-block h-9/10 w-full text-center">
-      <div class="h-3/10 min-h-[75px]">
-          <h2 class="my-5 text-2xl text-background">
-          Explore the world effortlessly by train !
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Tickethack</title>
+  <link rel='stylesheet' href='./style.css'>
+</head>
+
+<body class="h-[100vh] w-[100vw] bg-[url(./images/background.jpg)] bg-center bg-cover">
+  <!-- HEADER COMMON TO ALL PAGE -->
+  <header class="min-h-10 bg-background flex items-center justify-between w-full h-1/10">
+    <a href="./index.html">
+      <h1 id="logo" class="text-ticket-green ml-5 font-extrabold text-3xl">Tickethack</h1>
+    </a>
+    <div class="align-middle">
+      <a class="mx-5" href="./views/cart.html">Cart</a>
+      <a class="mx-5" href="./views/bookings.html">Bookings</a>
+    </div>
+  </header>
+  <!-- MAIN CONTAINER -->
+  <div id="main" class="inline-block h-9/10 w-full text-center">
+    <div class="h-3/10 min-h-[75px]">
+      <h2 class="my-5 text-2xl text-background">
+        Explore the world effortlessly by train !
         </h1>
         <h3 class="text-x text-background my-2">
           Compare, book an enjoy cheap prices for train tickets: your journey
           starts on Tickethack.
         </h3>
+    </div>
+    <div class="h-7/10 min-h-[150px] flex justify-center items-start">
+      <div class="min-h-[150px] mx-5 h-2/3 w-1/3 bg-background flex flex-col justify-evenly items-center rounded-xl">
+        <div class="w-17/20 m-2 text-center flex flex-col items-center">
+          <input class="rounded-xs max-h-10 h-full bg-grey w-full" type="text" placeholder="Departure" name="departure"
+            id="departure" />
+          <hr class="bg-grey  h-px w-19/20" />
+          <input class="rounded-xs max-h-10 h-full bg-grey w-full" type="text" placeholder="Arrival" name="arrival"
+            id="arrival" />
+        </div>
+        <input class="w-17/20 max-h-10 h-full mx-2 mb-4 rounded-xs bg-grey" type="date" id="date"
+          placeholder="DD/MM/YYYY" />
+        <button id="search-btn" class="w-17/20 my-4 green-button">
+          Search
+        </button>
       </div>
-    
-      <div class="h-7/10 min-h-[150px] flex justify-center items-start">
-        <div
-          class="min-h-[150px] mx-5 h-2/3 w-1/3 bg-background flex flex-col justify-evenly items-center rounded-xl"
-        >
-          <div class="w-17/20 m-2 text-center flex flex-col items-center">
-            <input
-              class="rounded-xs max-h-10 h-full bg-grey w-full"
-              type="text"
-              placeholder="Departure"
-              name="departure"
-              id="departure"
-            />
-            <hr class="bg-grey  h-px w-19/20" />
-            <input
-              class="rounded-xs max-h-10 h-full bg-grey w-full"
-              type="text"
-              placeholder="Arrival"
-              name="arrival"
-              id="arrival"
-            />
-          </div>
-          <input
-            class="w-17/20 max-h-10 h-full mx-2 mb-4 rounded-xs bg-grey"
-            type="date"
-            id="date"
-            placeholder="DD/MM/YYYY"
-          />
-          <button
-            id="search-btn"
-            class="w-17/20 my-4 green-button"
-          >
-            Search
-          </button>
-        </div>
-        <div
-          id="search-results"
-          class="min-h-[150px] mx-5 h-2/3 w-1/3 bg-background overflow-x-scroll flex flex-col justify-center items-center  rounded-xl"
-        >
-          <img
-            src="./images/train.png"
-            alt="a logo of train"
-            class="h-2/3 aspect-square p-5"
-          />
-          <hr class="h-px border-0 w-17/20 bg-ticket-green" />
-          <p class="m-5 text-ticket-green">It's time to book your future trip.</p>
-        </div>
+      <div id="search-results"
+        class="min-h-[150px] mx-5 h-2/3 w-1/3 bg-background overflow-x-scroll flex flex-col justify-center items-center  rounded-xl">
+        <img src="./images/train.png" alt="a logo of train" class="h-2/3 aspect-square p-5" />
+        <hr class="h-px border-0 w-17/20 bg-ticket-green" />
+        <p class="m-5 text-ticket-green">It's time to book your future trip.</p>
       </div>
     </div>
+  </div>
 
-    <!-- Templates -->
-    <template id="no-trip-tmpl">
-        <img
-            src="./images/notfound.png"
-            alt="trip not found"
-            class="h-2/3 aspect-square p-5"
-          />
-          <hr class="h-px border-0 w-17/20 bg-ticket-green" />
-          <p class="m-5 text-ticket-green">No trip found.</p>
-    </template>
+  <!-- Templates -->
+  <template id="no-trip-tmpl">
+    <img src="./images/notfound.png" alt="trip not found" class="h-2/3 aspect-square p-5" />
+    <hr class="h-px border-0 w-17/20 bg-ticket-green" />
+    <p class="m-5 text-ticket-green">No trip found.</p>
+  </template>
 
-    <template id="trip-tmpl">
-        <div class="m-2 h-1/5 w-17/20 grid grid-cols-5 bg-deep-grey rounded-l">
-            <div class=" mx-5 col-start-1 col-span-2  text-left my-auto">
-                <span id="departure"></span> > <span id="arrival"></span>
-            </div>
-            <div id="time" class="col-start-3 my-auto "></div>
-            <div  class="col-start-4 my-auto"><span id="price"></span>€</div>
-            <button id="book-btn" class="col-start-5 m-auto p-1 align-middle max-h-[30px] green-button">Book</button>
-        </div>
-    </template>
+  <template id="trip-tmpl">
+    <div class="m-2 h-1/5 w-17/20 grid grid-cols-5 bg-deep-grey rounded-l">
+      <div class=" mx-5 col-start-1 col-span-2  text-left my-auto">
+        <span id="departure"></span> > <span id="arrival"></span>
+      </div>
+      <div id="time" class="col-start-3 my-auto "></div>
+      <div class="col-start-4 my-auto"><span id="price"></span>€</div>
+      <button id="book-btn" class="col-start-5 m-auto p-1 align-middle max-h-[30px] green-button">Book</button>
+    </div>
+  </template>
 
-    <script src="./scripts/index.js"></script>
-  </body>
+  <script src="./scripts/index.js"></script>
+</body>
+
 </html>
