lil' bit of style and add cart Total

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </template>
 
   <template id="trip-tmpl">
-    <div class="m-2 h-1/5 w-17/20 grid grid-cols-5 bg-deep-grey rounded-l">
+    <div class=" trip-box  grid grid-cols-5">
       <div class=" mx-5 col-start-1 col-span-2  text-left my-auto">
         <span id="departure"></span> > <span id="arrival"></span>
       </div>
