added loggin logic for the frontend

--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
       <h1 id="logo" class="text-ticket-green ml-5 font-extrabold text-3xl">Tickethack</h1>
     </a>
     <div class="align-middle">
+      <button class="green-button" id="log-in">
+        Log in
+      </button>
       <a class="mx-5" href="./views/cart.html">Cart</a>
       <a class="mx-5" href="./views/bookings.html">Bookings</a>
     </div>
@@ -72,6 +75,7 @@
     </div>
   </template>
 
+  <script src="./scripts/logIn.js"></script>
   <script src="./scripts/index.js"></script>
 </body>
 
