--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
   <!-- MAIN CONTAINER -->
   <div id="main" class="inline-block h-9/10 w-full text-center">
     <div class="h-3/10 min-h-[75px]">
-      <h2 class="my-5 text-2xl text-background">
+      <h2 class="my-5 text-4xl font-extrabold text-background">
         Explore the world effortlessly by train !
         </h1>
-        <h3 class="text-x text-background my-2">
+        <h3 class="text-2xl font-bold text-background my-2">
           Compare, book an enjoy cheap prices for train tickets: your journey
           starts on Tickethack.
         </h3>
